Fix boxes jumping for upload forms.

--- a/static/css/astrobin.css
+++ b/static/css/astrobin.css
@@ -2520,8 +2520,14 @@ p.info strong {
   font-weight: normal;
   text-shadow: 0px 0px 1px #333333;
 }
+form.upload {
+  padding: 8px 0;
+}
 form.upload input {
   width: auto;
+}
+form.upload .submit-button {
+  margin: 0;
 }
 p.error {
   color: red;
